# CCOMP

./: .clang-format  .clang-tidy  .clangd  CMakeLists.txt  test.c
include/: lang.h
src/: main.c
